# mainpypet.py

./: .env  .gitignore  .replit  Adventure.py  Apr12.py  Aug11_Ex.py  Aug2.py  Aug30.py  DotStrings_Jan17.py  July26.py  June28.py  March1.py  March15.py  March8.py  May24.py  MovieList.py  PathsFeb2022.py  ProblemSol_Jan24.py  RPS.py  Sept14.py  Sept27.py  Sept6.py  Strings_Nov29.py  Strings_Oct18.py  anything_once.py  apis.py  battle.py  cardlist.py  chapter_2.py  chapter_3.py  contacts.txt  dragon_realm_part1.py  etc.txt  flashcards.py  main.py  may2.py  pets.py  pracBri.py  private.py  private.py.gitignore  (+5 more)
data/: git-concepts.md  greetings.txt  groceries.txt  todo.txt  yyy.txt
data/Xman_Xmas/: Jean_Grey.txt  Kitty_Pryde.txt  Kurt_Wagner.txt  Orroro_Monroe.txt  Scott_Summers.txt  etc.txt
data/flashcard_project/: paths.csv
project_outrun/: Apr16.py  Apr19.py  Apr26.py  Dec28Loops.py  Feb15.py  Feb8.py  Jan11.py  Jan18.py  Jan25.py  July12.py  March1.py  March22.py  May17.py  May3.py  May31.py  beer_exercise.py  flashcards.py
tests/: notes.md  test_game.py  test_may2.py
